2007-12-04  John W. Eaton  <jwe@octave.org>

	* load-save.cc (Fsave, Fload): Doc fixes.
	From Marco Caliari <caliari@sci.univr.it>.

2007-12-04  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h.in (base_properties::get_type
        base_properties::get___modified__,
	base_properties::get___myhandle__): New functions.

2007-12-04  Christoph Mayer  <Christoph.Mayer@dlr.de>.

	* toplev.h (clean_up_and_exit, recover_from_exception,
	do_octave_atexit, global_command, curr_parent_function):
	Tag with OCTINTERP_API. 

2007-12-03  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/luinc.cc: Make tests conditional on HAVE_UMFPACK.
	* DLD-FUNCTIONS/spqr.cc: Make tests conditional on HAVE_CXSPARSE.

	* DLD-FUNCTIONS/regexp.cc: Use "%!testif" blocks for conditional
	tests on PCRE.

	* graphics.cc (class axes): Add color and activepositionproperty
	properties to axis objects.
	* graphics.h.in (class axes): ditto.

	* DLD-FUNCTIONS/regexp.cc: Also include sys/types.h for regexp.

2007-11-30  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/sort.cc (operator < (const Complex&, const Complex&),
	operator > (const Complex&, const Complex&)):
	Pass args by const reference, not value.

	* src/data.cc, src/matherr.c, src/pr-output.cc, src/sysdep.cc,
	src/DLD-FUNCTIONS/__dsearchn__.cc, src/DLD-FUNCTIONS/minmax.cc,
	src/DLD-FUNCTIONS/qz.cc, src/DLD-FUNCTIONS/sort.cc,
	src/DLD-FUNCTIONS/tsearch.cc: Include lo-math.h instead of cmath
	or math.h.

2007-11-30  Moritz Borgmann  <octave@moriborg.de>

	* ls-mat5.h (mat5_data_type): Delete trailing comma in enum decl.
	* oct-stream.cc (octave_base_stream::do_printf): Use
	OCTAVE_EMPTY_CPP_ARG to avoid annoying Sun compiler warning.
	* OPERATORS/op-sbm-sbm.cc (DEFDBLCONVFN): Delete useless macro
	invocation.

	* DLD-FUNCTIONS/typecast.cc (typecast): No longer static.

2007-11-30  John W. Eaton  <jwe@octave.org>

	* graphics.cc (updating_axis_limits): New static variable.